# plyReader-tool

./: .gitignore  CMakeLists.txt  README.md
include/: PlyReader.h  exception.h  strings.h  system.h  tokenizer.h
src/: PlyReader.cpp  system.cpp
test/: main.cpp
